tests/ui/pin_project/packed-enum.stderr
error: #[repr(packed)] attribute should be applied to a struct or union
  --> tests/ui/pin_project/packed-enum.rs:15:8
   |
15 | #[repr(packed)] //~ ERROR E0517
   |        ^^^^^^

error: #[repr(packed)] attribute should be applied to a struct or union
  --> tests/ui/pin_project/packed-enum.rs:20:8
   |
20 | #[repr(packed)] //~ ERROR E0517
   |        ^^^^^^

error: `#[repr(packed)]` attribute cannot be used on enums
 --> tests/ui/pin_project/packed-enum.rs:9:1
  |
9 | #[repr(packed)] //~ ERROR E0517
  | ^^^^^^^^^^^^^^^
  |
  = help: `#[repr(packed)]` can be applied to structs and unions

error: `#[repr(packed)]` attribute cannot be used on enums
  --> tests/ui/pin_project/packed-enum.rs:15:1
   |
15 | #[repr(packed)] //~ ERROR E0517
   | ^^^^^^^^^^^^^^^
   |
   = help: `#[repr(packed)]` can be applied to structs and unions

error: `#[repr(packed)]` attribute cannot be used on enums
  --> tests/ui/pin_project/packed-enum.rs:20:1
   |
20 | #[repr(packed)] //~ ERROR E0517
   | ^^^^^^^^^^^^^^^
   |
   = help: `#[repr(packed)]` can be applied to structs and unions
